// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List check the direction props 1`] = `
<DocumentFragment>
  .c0.mul-list .mul-list__loading,
.c0.mul-list .mul-list__finished-text,
.c0.mul-list .mul-list__error-text {
  color: #969799;
  font-size: 0.875rem;
  line-height: 3.125rem;
  text-align: center;
}

.c0.mul-list .mul-list__placeholder {
  height: 0;
  pointer-events: none;
}

<div
    class="c0 mul-list"
    role="feed"
  >
    <div
      class="mul-list__placeholder"
    />
  </div>
</DocumentFragment>
`;

exports[`List check the direction props 2`] = `
<DocumentFragment>
  .c0.mul-list .mul-list__loading,
.c0.mul-list .mul-list__finished-text,
.c0.mul-list .mul-list__error-text {
  color: #969799;
  font-size: 0.875rem;
  line-height: 3.125rem;
  text-align: center;
}

.c0.mul-list .mul-list__placeholder {
  height: 0;
  pointer-events: none;
}

<div
    class="c0 mul-list"
    role="feed"
  >
    <div
      class="mul-list__placeholder"
    />
  </div>
</DocumentFragment>
`;

exports[`List error children 1`] = `
<DocumentFragment>
  .c0.mul-list .mul-list__loading,
.c0.mul-list .mul-list__finished-text,
.c0.mul-list .mul-list__error-text {
  color: #969799;
  font-size: 0.875rem;
  line-height: 3.125rem;
  text-align: center;
}

.c0.mul-list .mul-list__placeholder {
  height: 0;
  pointer-events: none;
}

<div
    aria-busy="false"
    class="c0 mul-list"
    role="feed"
  >
    <div
      class="mul-list__error-text"
    >
      <div>
        Custom Error
      </div>
    </div>
    <div
      class="mul-list__placeholder"
    />
  </div>
</DocumentFragment>
`;

exports[`List finished children 1`] = `
<DocumentFragment>
  .c0.mul-list .mul-list__loading,
.c0.mul-list .mul-list__finished-text,
.c0.mul-list .mul-list__error-text {
  color: #969799;
  font-size: 0.875rem;
  line-height: 3.125rem;
  text-align: center;
}

.c0.mul-list .mul-list__placeholder {
  height: 0;
  pointer-events: none;
}

<div
    aria-busy="false"
    class="c0 mul-list"
    role="feed"
  >
    <div
      class="mul-list__finished-text"
    >
      <div>
        Custom Finished
      </div>
    </div>
    <div
      class="mul-list__placeholder"
    />
  </div>
</DocumentFragment>
`;
